// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`business-representative Country-specific identification number label renders CAN SIN label and help text 1`] = `
<business-representative>
  <fieldset>
    <legend part="heading-2 heading text color font-family">
      Representative
    </legend>
    <div class="gy-3 row">
      <div class="col-12 col-md-8">
        <form-control-text label="Full Name" name="name"></form-control-text>
      </div>
      <div class="col-12 col-md-4">
        <form-control-select label="Title" name="title"></form-control-select>
      </div>
      <div class="col-12 col-md-6">
        <form-control-text label="Email Address" name="email"></form-control-text>
      </div>
      <div class="col-12 col-md-6">
        <form-control-number-masked label="Phone Number" mask="(000) 000-0000" name="phone"></form-control-number-masked>
      </div>
      <div class="col-12 col-md-4">
        <form-control-date label="Birth Date" name="dob_full"></form-control-date>
      </div>
      <div class="col-12 col-md-8">
        <form-control-number-masked helptext="Enter your full Social Insurance Number." label="SIN (optional)" mask="000-000-000" name="identification_number"></form-control-number-masked>
      </div>
      <div class="col-12">
        <identity-address-form country="CAN"></identity-address-form>
      </div>
    </div>
  </fieldset>
</business-representative>
`;

exports[`business-representative Country-specific identification number label renders USA SSN label and help text 1`] = `
<business-representative>
  <fieldset>
    <legend part="heading-2 heading text color font-family">
      Representative
    </legend>
    <div class="gy-3 row">
      <div class="col-12 col-md-8">
        <form-control-text label="Full Name" name="name"></form-control-text>
      </div>
      <div class="col-12 col-md-4">
        <form-control-select label="Title" name="title"></form-control-select>
      </div>
      <div class="col-12 col-md-6">
        <form-control-text label="Email Address" name="email"></form-control-text>
      </div>
      <div class="col-12 col-md-6">
        <form-control-number-masked label="Phone Number" mask="(000) 000-0000" name="phone"></form-control-number-masked>
      </div>
      <div class="col-12 col-md-4">
        <form-control-date label="Birth Date" name="dob_full"></form-control-date>
      </div>
      <div class="col-12 col-md-8">
        <form-control-number-masked helptext="Enter your full Social Security Number. It is required for Federal OFAC check." label="SSN" mask="000-00-0000" name="identification_number"></form-control-number-masked>
      </div>
      <div class="col-12">
        <identity-address-form country="USA"></identity-address-form>
      </div>
    </div>
  </fieldset>
</business-representative>
`;

exports[`business-representative Form component behavior uses toggleable-field instead of form-control-number-masked 1`] = `
<business-representative>
  <fieldset>
    <legend part="heading-2 heading text color font-family">
      Representative
    </legend>
    <div class="gy-3 row">
      <div class="col-12 col-md-8">
        <form-control-text label="Full Name" name="name"></form-control-text>
      </div>
      <div class="col-12 col-md-4">
        <form-control-select label="Title" name="title"></form-control-select>
      </div>
      <div class="col-12 col-md-6">
        <form-control-text label="Email Address" name="email"></form-control-text>
      </div>
      <div class="col-12 col-md-6">
        <form-control-number-masked label="Phone Number" mask="(000) 000-0000" name="phone"></form-control-number-masked>
      </div>
      <div class="col-12 col-md-4">
        <form-control-date label="Birth Date" name="dob_full"></form-control-date>
      </div>
      <div class="col-12 col-md-8">
        <form-control-number-masked helptext="Enter your full Social Security Number. It is required for Federal OFAC check." label="SSN" mask="000-00-0000" name="identification_number"></form-control-number-masked>
      </div>
      <div class="col-12">
        <identity-address-form country="USA"></identity-address-form>
      </div>
    </div>
  </fieldset>
</business-representative>
`;
